--- a/style.css
+++ b/style.css
@@ -74,6 +74,26 @@ body{
     margin-left: 5%;
 }
 
+#whoamiHeader{
+    color: darkblue;
+}
+
+#whoamiResumeBox{
+    border: 2px solid black;
+    background-color: lightblue;
+
+    margin-top: 3%;
+
+    width: 30%;
+    max-width: 30%;
+
+    text-align: center;
+}
+
+#whoamiPicOfMe{
+    margin-bottom: 3%;
+}
+
 /* ~~~~~~ Sharpeez ~~~~~~ */
 
 #sharpeezHeader, #sharpeezText{
