--- a/style.css
+++ b/style.css
@@ -86,12 +86,14 @@ body{
 
     width: 30%;
     max-width: 30%;
+    min-width: 200px;
 
     text-align: center;
 }
 
 #whoamiPicOfMe{
     margin-bottom: 3%;
+    max-width: 80%;
 }
 
 /* ~~~~~~ Sharpeez ~~~~~~ */
