--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
 
 /* ~~~~~~ Music ~~~~~~*/
 
-#musicHeader, #musicText{
+#musicHeader, #musicText, #musicOCText{
     margin-left: 5%;
 }
 
@@ -133,6 +133,26 @@ body{
 
     max-width: 100%;
     max-height: 315px;
+}
+
+#musicDivider{
+    height: 3px;
+    background-color: darkblue;
+    opacity: 0.6;
+}
+
+.musicOCBoxes{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 3%;
+    border: 2px solid black;
+    background-color: rgba(173, 216, 230, 0.6);
+    vertical-align: middle;
+}
+
+.musicOCBoxAudio, .musicOCBoxText{
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
 
