--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 
     height: 100%;
 
-    background: url("Blue Jay Waving x16.png");
+    background: url("WebsiteBackground.png");
     background-size: auto 100%;
     background-repeat: no-repeat;
     background-color: #ecfbff;
