--- a/style.css
+++ b/style.css
@@ -98,6 +98,58 @@ body{
 }
 
 
+/* ~~~~~~ Games ~~~~~~ */
+
+#gamesHeader, #gamesText{
+    margin-left: 5%;
+}
+
+#gamesHeader{
+    color: darkblue;
+}
+
+.gamesSubHeader{
+    color: blue;
+    margin-left: 5%;
+}
+
+.gamesBox{
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 3%;
+    border: 2px solid black;
+    background-color: rgba(173, 216, 230, 0.6);
+}
+
+.gamesBoxPic{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    max-height: 204px;
+    max-width: 204px;
+}
+
+#gradGamePic, #pdfPic{
+    max-height: 204px;
+    max-width: 204px;
+}
+
+.gamesBoxTitle{
+    margin-top: 6%;
+    margin-bottom: 6%;
+}
+
+.gamesBoxText{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+#fallingSimulatorText{
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+
 /* ~~~~~~ Music ~~~~~~*/
 
 #musicHeader, #musicText, #musicOCText{
