--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body{
 
 #gamesHeader, #gamesText{
     margin-left: 5%;
+    margin-right: 5%;
 }
 
 #gamesHeader{
@@ -154,6 +155,7 @@ body{
 
 #musicHeader, #musicText, #musicOCText{
     margin-left: 5%;
+    margin-right: 5%;
 }
 
 #musicHeader{
