--- a/style.css
+++ b/style.css
@@ -123,16 +123,16 @@ body{
 }
 
 .gamesBoxPic{
-    margin-top: 1%;
-    margin-bottom: 1%;
+    margin-top: 2%;
+    margin-bottom: 2%;
     margin-right: 1%;
     max-height: 204px;
     max-width: 204px;
 }
 
-#gradGamePic, #pdfPic{
-    max-height: 204px;
-    max-width: 204px;
+#fsPic, #gradGamePic, #pdfPic{
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .gamesBoxTitle{
